Use case 3 : 1. Separate the Logic from the triggers 2. Remove callouts from triggers 3. Refactor the code into helpers & services (Design Patterns, named Credentials ...) 4. Add TestDataFactory 5. Add missing assertions to Test classes 6. Add unit tests for classes that do not have a 100% test coverage 7. The current implementation creates a tasks and the users must manually send emails, you should implement a mail service to send emails to attendees automatically.

--- a/force-app/main/default/classes/ExternalSystemService.cls
+++ b/force-app/main/default/classes/ExternalSystemService.cls
@@ -1,44 +1,75 @@
-public  class ExternalSystemService {
+public class ExternalSystemService {
 
-    private String webServiceURL;
+    /**
+     * @description register Attendees of accounts
+     * @param accountsIds Ids of all accounts that need to
+     */
+    @Future(Callout = true)
+    public static void registerAttendees(Set<Id> accountsIds) {
+        // ContactDataManager
+        List<Contact> contacts = DM003_Contact.getContactsByAccountsIds(accountsIds);
 
-    public ExternalSystemService(){
-        this.webServiceURL = 'https://th-apex-http-callout.herokuapp.com/animals';
+        HttpResponse response = AttendeesCallouts.registerAttendees(contacts);
+        // Parse the JSON response
+        if (response.getStatusCode() == 200) {
+            notifyAttendeeByEmail(contacts);
+        } else {
+            System.debug('The status code returned was not expected: ' + response.getStatusCode());
+        }
+
     }
 
-    public void registerAttendees(Case r){
-            for(Account a : [SELECT id FROM Account where id = :r.AccountId]){
-                for(Contact c : [SELECT id,name, email FROM Contact where accountid =: a.id ]){
-                    Http http = new Http();
-                    HttpRequest request = new HttpRequest();
-                    request.setEndpoint(this.webServiceURL);
-                    request.setMethod('POST');
-                    request.setHeader('Content-Type', 'application/json;charset=UTF-8');
-                    // Set the body as a JSON object
-                    request.setBody('{"name":"'+ c.name + '-' + c.email  +'}');
-                    HttpResponse response = http.send(request);
-                    // Parse the JSON response
-                    if (response.getStatusCode() != 201) {
-                        System.debug('The status code returned was not expected: ' +
-                            response.getStatusCode() + ' ' + response.getStatus());
-                    } else {
-                       // Everything went as expected.
-                       notifyAttendeeByEmail(c);
-                    }
-                }
-            
+    /**
+     * @description Notify attendee by Email
+     * @param contacts
+     */
+    public static void notifyAttendeeByEmail(List<Contact> contacts) {
+
+        if( !contacts.isEmpty() ){
+            List<Messaging.SingleEmailMessage> mails = new List<Messaging.SingleEmailMessage>();
+            // Set capacity to not exceed daily email limits
+            Messaging.reserveSingleEmailCapacity(contacts.size());
+            for ( Contact contact : contacts){
+                Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+
+                // Strings to hold the email addresses to which you are sending the email.
+                String[] toAddresses = new String[] {contact.Email};
+
+                // Assign the addresses for the To and CC lists to the mail object.
+                mail.setToAddresses(toAddresses);
+
+                // Specify the name used as the display name.
+                mail.setSenderDisplayName('Salesforce Support');
+
+                // Specify the subject line for your email address.
+                mail.setSubject('Hi ' + contact.Name + '!');
+
+                // Set to True if you want to BCC yourself on the email.
+                mail.setBccSender(false);
+
+                // Specify the text content of the email.
+                mail.setPlainTextBody('Welcome ' + contact.Name + ' you have been successfully register');
+
+                mail.setHtmlBody('Welcome ' + contact.Name + ' you have been successfully register');
+                mails.add( mail );
+            }
+
+            // Send the email you have created.
+            Messaging.sendEmail( mails , true );
         }
-    } 
 
-    public void notifyAttendeeByEmail(Contact account){
-      
-        Task tk = new Task();
-        tk.Subject = 'Send Email To' + account.name;
-        tk.Status = 'Open';
-        tk.Priority = 'Normal';
-        tk.WhatId = account.ID;
-        insert tk;
-    } 
+        List<Task> tasks = new List<Task>();
+        for (Contact contact : contacts) {
+            Task task = new Task();
+            task.Subject = 'Send Email To' + contact.name;
+            task.Status = 'Open';
+            task.Priority = 'Normal';
+            task.WhatId = contact.Id;
+            tasks.add(task);
+        }
+        insert tasks;
 
+
+    }
 
 }
