Factorise Constants Fix DML Call in CaseTriggerHandler

--- a/force-app/main/default/classes/AccountDataManager.cls
+++ b/force-app/main/default/classes/AccountDataManager.cls
@@ -2,7 +2,7 @@
  * Created by ahilali on 14/12/2021.
  */
 
-public with sharing class DM002_Account {
+public with sharing class AccountDataManager {
     /**
      * @description Account with Contacts By Account Id
      *
@@ -12,6 +12,16 @@ public with sharing class DM002_Account {
      */
     public static Account getAccountById( Id accountId ){
         return [SELECT Id, (SELECT Id, Name, Email FROM Contacts) FROM Account WHERE Id = :accountId LIMIT 1];
+    }
+
+    public static Map<String,Account> getAccountsByIds_Map( Set<Id> accountsIds ){
+        Map<String, Account> accountsMap = new Map<String, Account>();
+
+        for(Account account : [SELECT Id, (SELECT Id, Name, Email FROM Contacts) FROM Account WHERE Id IN :accountsIds]) {
+            accountsMap.put(account.Id, account);
+        }
+
+        return accountsMap;
     }
 
     /**
